--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.D8QFEBx6.js",
+    "file": "_app/immutable/entry/app.AQiWF-Cb.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -19,7 +19,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.BhMN4uXx.js",
+    "file": "_app/immutable/nodes/0.CGDvb1ok.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -27,12 +27,12 @@
     "imports": [
       "_DzV9Oz0k.js",
       "_IHki7fMi.js",
-      "_UISnZMS-.js",
+      "_C358f-vf.js",
       "_BwNcEr-W.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.nvCRqPRn.js",
+    "file": "_app/immutable/nodes/1.BODI6HOZ.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -40,7 +40,7 @@
     "imports": [
       "_DzV9Oz0k.js",
       "_IHki7fMi.js",
-      "_g2JTQXOJ.js"
+      "_BihKxkUl.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -60,7 +60,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.DTVbsL4t.js",
+    "file": "_app/immutable/nodes/3.C_R82WTm.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -69,14 +69,14 @@
       "_DzV9Oz0k.js",
       "_D6YF6ztN.js",
       "_IHki7fMi.js",
-      "_UISnZMS-.js"
+      "_C358f-vf.js"
     ],
     "css": [
       "_app/immutable/assets/3.BlKpycSN.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.ubP99bmW.js",
+    "file": "_app/immutable/nodes/4.Bcynu1ae.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -84,7 +84,7 @@
     "imports": [
       "_DzV9Oz0k.js",
       "_IHki7fMi.js",
-      "_UISnZMS-.js",
+      "_C358f-vf.js",
       "_BwNcEr-W.js"
     ],
     "css": [
@@ -92,7 +92,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.Bpj0_hNH.js",
+    "file": "_app/immutable/nodes/5.DqNOfvMf.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
@@ -100,7 +100,7 @@
     "imports": [
       "_DzV9Oz0k.js",
       "_IHki7fMi.js",
-      "_g2JTQXOJ.js",
+      "_BihKxkUl.js",
       "_wjsDZaue.js"
     ],
     "css": [
@@ -110,6 +110,13 @@
   "_!~{00g}~.js": {
     "file": "_app/immutable/assets/Footer.CRG8fDco.css",
     "src": "_!~{00g}~.js"
+  },
+  "_BihKxkUl.js": {
+    "file": "_app/immutable/chunks/BihKxkUl.js",
+    "name": "stores",
+    "imports": [
+      "_C358f-vf.js"
+    ]
   },
   "_BwNcEr-W.js": {
     "file": "_app/immutable/chunks/BwNcEr-W.js",
@@ -122,6 +129,13 @@
     "file": "_app/immutable/chunks/C1FmrZbK.js",
     "name": "preload-helper"
   },
+  "_C358f-vf.js": {
+    "file": "_app/immutable/chunks/C358f-vf.js",
+    "name": "entry",
+    "imports": [
+      "_DzV9Oz0k.js"
+    ]
+  },
   "_D6YF6ztN.js": {
     "file": "_app/immutable/chunks/D6YF6ztN.js",
     "name": "each"
@@ -133,20 +147,6 @@
   "_IHki7fMi.js": {
     "file": "_app/immutable/chunks/IHki7fMi.js",
     "name": "index"
-  },
-  "_UISnZMS-.js": {
-    "file": "_app/immutable/chunks/UISnZMS-.js",
-    "name": "entry",
-    "imports": [
-      "_DzV9Oz0k.js"
-    ]
-  },
-  "_g2JTQXOJ.js": {
-    "file": "_app/immutable/chunks/g2JTQXOJ.js",
-    "name": "stores",
-    "imports": [
-      "_UISnZMS-.js"
-    ]
   },
   "_wjsDZaue.js": {
     "file": "_app/immutable/chunks/wjsDZaue.js",
@@ -161,12 +161,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CJbN8n_C.js",
+    "file": "_app/immutable/entry/start.DaT_njKU.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_UISnZMS-.js"
+      "_C358f-vf.js"
     ]
   }
 }
