--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@supabase/auth-helpers-sveltekit": "^0.13.0",
     "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.75.0"
+    "@supabase/supabase-js": "^2.75.0",
+    "resend": "^6.5.2"
   }
 }
